proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/can_reassign_built_in_funcs.py
a = [1, 2, 3]
print min(a)
min = sum
print min(a)
