proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_keyword.py
def foo(bar, baz):
	print 1

foo(baz=2, bar=1)
